# rocket-rust-backend

./: .env.example  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
migrations/2023-06-03-124958_create_users_table/: up.sql
migrations/2023-06-04-052524_create_api_tokens_table/: up.sql
migrations/2023-06-04-072224_create_permissions_table/: up.sql
migrations/2023-06-04-093208_create_permission_user_table/: down.sql  up.sql
migrations/2023-06-04-102834_create_roles_table/: up.sql
migrations/2023-06-04-104927_create_role_user_table/: down.sql  up.sql
migrations/2023-06-04-125714_create_permission_role_table/: down.sql  up.sql
src/: api_doc.rs  main.rs
src/controllers/: auth.rs  catcher.rs  mod.rs  permission.rs  role.rs  user.rs
src/helpers/: database.rs  hash.rs  mod.rs
src/middleware/: authentication.rs  mod.rs
src/models/: api_token_model.rs  mod.rs  permission_model.rs  permission_role_model.rs  permission_user.rs  role_model.rs  role_user_model.rs  user.rs  user_model.rs
src/oas/: mod.rs  permission.rs  permission_oas.rs  role.rs  role_oas.rs  user.rs
src/requests/: auth.rs  mod.rs  pagination.rs  pagination_request.rs  permission.rs  role.rs  user.rs  user_request.rs
src/responses/: auth.rs  mod.rs  pagination.rs  pagination_response.rs  permission_response.rs  role.rs  user_response.rs
src/schemas/: api_token.rs  mod.rs  permission.rs  role_schema.rs  user.rs
