[package]
name = "boilerplate-rocket"
description = "Boilerplate rust with rocket"
authors = ["Geriano <gerianoadikaputra@gmail.com>"]
license = "MIT"
version = "0.0.1"
edition = "2021"
keywords = ["web", "template", "boilerplate", "mvc"]
categories = ["framework", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_contrib = { version = "0.4.11", default-features = false, features = ["json"] }
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = "0.10.6"
hex = "0.4.3"
utoipa-swagger-ui = { version = "3", features = ["rocket"] }
utoipa = "3.3.0"
